clusters/production/apps/ddnsadmin-production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddnsadmin
  namespace: ddnsadmin-production
spec:
  type: ClusterIP
  selector:
    app: ddnsadmin
  ports:
  - name: http
    port: 8000
    targetPort: http
    protocol: TCP
